--- a/styles/contact_us.css
+++ b/styles/contact_us.css
@@ -23,6 +23,9 @@
 .darkgreen {
   color: #6C7D2A; }
 
+.orange {
+  color: #f3ab1f; }
+
 body {
   color: #222; }
 
@@ -56,6 +59,9 @@ img {
 
 .darkgreen {
   color: #6C7D2A; }
+
+.orange {
+  color: #f3ab1f; }
 
 /****** Header ******/
 .pathway-header {
@@ -403,6 +409,9 @@ footer {
 
 .darkgreen {
   color: #6C7D2A; }
+
+.orange {
+  color: #f3ab1f; }
 
 html, body {
   height: 100%; }
@@ -851,32 +860,33 @@ body {
 	width: 13px;
 	height: 20px;
 }*/
-.show-question {
-  opacity: 0;
-  z-index: 99999;
-  pointer-events: none; }
-  .show-question div {
-    opacity: 0;
-    border-radius: 20px;
-    float: left;
-    top: 35%;
-    left: 25%;
-    background-color: white; }
-    .show-question div .green {
-      color: green;
-      font-weight: bold; }
-    .show-question div .bold {
-      font-weight: bold; }
+.bottom-border {
+  border-bottom: 1px solid black; }
 
-.show-question.on {
-  opacity: 1;
-  pointer-events: auto; }
+.select-section {
+  padding: 20px 0; }
 
-.show-question:target {
-  opacity: 1;
-  pointer-events: auto; }
+#user-type, #help-type {
+  display: inline-block;
+  width: initial;
+  margin-left: 8px; }
+
+.self-help-list .item {
+  width: 49%;
+  padding: 5px 20px 5px 0;
+  display: inline-block;
+  vertical-align: top; }
+
+.self-help-header {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #dc4831;
+  letter-spacing: 1px;
+  margin-top: 25px;
+  margin-bottom: 8px; }
 
 .question-close {
+  display: none;
   background: green;
   color: white;
   line-height: 24px;
@@ -889,78 +899,58 @@ body {
   font-weight: bold;
   border: 1px solid #666;
   border-radius: 12px; }
+  .question-close:hover {
+    text-decoration: none;
+    color: white; }
 
-#info-email {
-  opacity: 0;
-  z-index: 99999;
-  pointer-events: none;
-  float: left; }
-
-#info-email.on {
-  opacity: 1;
-  pointer-events: auto; }
-  #info-email.on div {
-    opacity: 1; }
-
-#info-email:target {
-  opacity: 1;
-  pointer-events: auto; }
-
-.phone-close {
-  background: red;
-  color: white;
-  line-height: 24px;
-  position: absolute;
-  right: -12px;
-  text-align: center;
-  top: -10px;
-  width: 26px;
-  text-decoration: none;
-  font-weight: bold;
-  border: 1px solid #666;
-  border-radius: 12px; }
-
-#info-phone.on {
-  opacity: 1;
-  pointer-events: auto; }
-  #info-phone.on div {
-    opacity: 1; }
-
-#info-phone:target {
-  opacity: 1;
-  pointer-events: auto; }
-
-#info-phone {
-  opacity: 00;
-  z-index: 99999;
-  pointer-events: none; }
-  #info-phone div {
-    opacity: 00;
-    padding: 20px;
-    border: solid 3px red;
-    border-radius: 20px;
+.show-question {
+  display: none; }
+  .show-question div {
     float: left;
-    text-align: center;
-    position: absolute;
-    top: 35%;
-    left: 25%;
+    text-align: left;
+    position: relative;
     background-color: white;
-    box-shadow: 5px 5px 10px #222;
+    display: block; }
+    .show-question div:only-child {
+      position: fixed;
+      top: 40%;
+      left: 25%;
+      opacity: 100%;
+      background-color: white;
+      width: 60%;
+      padding: 20px;
+      border-radius: 20px;
+      z-index: 100;
+      outline: 9999px solid rgba(0, 0, 0, 0.5); }
+    .show-question div.hidden {
+      display: none; }
+  .show-question .bold {
+    font-weight: bold; }
+  .show-question .italic {
+    font-style: italic; }
+  .show-question .small {
+    font-size: 10px; }
+  .show-question .green {
+    color: green; }
+
+.more-help-header {
+  display: block;
+  position: relative;
+  overflow: hidden; }
+  .more-help-header .more-help {
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.12em;
+    margin: 30px 10px 30px 60px; }
+  .more-help-header .more-help-icon {
     display: block;
     position: absolute;
-    left: 140px;
-    top: 247px; }
-  #info-phone .numbers-box {
-    background-color: red;
-    color: white;
-    display: block;
-    font-variant: small-caps; }
-  #info-phone .bold {
-    font-weight: bold; }
-  #info-phone .italic {
-    font-style: italic; }
-  #info-phone .small {
-    font-size: 10px; }
+    background-image: url("/working-build/img/contact-us/Need-More-Help.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 50px;
+    width: 50px;
+    top: 12px; }
 
 .icons {
   height: 160px; }
@@ -969,29 +959,33 @@ body {
   display: block;
   height: 150px; }
   .iconic .icon-btn {
-    cursor: pointer; }
+    cursor: pointer;
+    margin: auto; }
+  .iconic:hover {
+    text-decoration: none; }
   .iconic .recommended {
     display: block;
     height: 120px;
-    width: 120px;
     margin: 0;
     padding: 0; }
     .iconic .recommended .icon-btn {
-      border: solid 1px red; }
-  .iconic .recommended::after {
-    content: "recommended";
-    font-variant: small-caps;
-    background-color: red;
-    color: white;
-    display: block;
-    text-align: center;
-    border: solid 1px red;
-    margin: 0;
-    padding: 0; }
+      border: solid 1px #dc4831; }
+    .iconic .recommended:after {
+      content: "recommended";
+      text-transform: uppercase;
+      width: 120px;
+      font-size: 9px;
+      letter-spacing: 0.09em;
+      background-color: #dc4831;
+      color: white;
+      display: block;
+      text-align: center;
+      border: solid 1px #dc4831;
+      margin: 0 auto;
+      padding: 3px 0; }
   .iconic div:not(.recommended) {
     display: block;
-    height: 120px;
-    width: 120px; }
+    height: 120px; }
   .iconic #Phone {
     background-image: url("/working-build/img/contact-us/Phone.png");
     display: block;
@@ -1020,70 +1014,24 @@ body {
     .iconic #Chat:hover {
       background-image: url("/working-build/img/contact-us/Chat_hover.png"); }
 
-.more-help {
-  display: inline-block;
-  background-image: url("/working-build/img/contact-us/Need-More-Help.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 50px;
-  width: 50px;
-  margin-top: 10px; }
+.info-email {
+  position: relative; }
+  .info-email .icon {
+    display: block; }
 
-form div {
-  width: 100%; }
-
-.contact-navigator {
-  position: relative;
-  margin: 10px -8px;
-  overflow: hidden; }
-  .contact-navigator .contact-tab {
-    display: table;
-    width: 20%;
-    float: left;
-    text-align: center;
-    padding: 0 8px; }
-    .contact-navigator .contact-tab .tab-inner {
-      position: relative;
-      display: table-cell;
-      border: black 1px solid;
-      text-transform: uppercase;
-      color: white;
-      letter-spacing: .09em;
-      padding: 3px 5px 11px 5px;
-      line-height: 130%;
-      height: 60px;
-      vertical-align: middle;
-      font-weight: bold; }
-      .contact-navigator .contact-tab .tab-inner:after {
-        content: "";
-        display: block;
-        position: absolute;
-        border: 7px transparent solid;
-        border-bottom-width: 0;
-        border-top-color: rgba(0, 0, 0, 0.4);
-        width: 0;
-        height: 0;
-        bottom: 4px;
-        margin-left: auto;
-        margin-right: auto;
-        left: 0;
-        right: 0; }
-      .contact-navigator .contact-tab .tab-inner.orange {
-        background: #f3ab1f;
-        border-color: #f3ab1f; }
-      .contact-navigator .contact-tab .tab-inner.turquoise {
-        background: #1c818f;
-        border-color: #1c818f; }
-      .contact-navigator .contact-tab .tab-inner.red {
-        background: #dc4831;
-        border-color: #dc4831; }
-      .contact-navigator .contact-tab .tab-inner.teal {
-        background: #7fc7b6;
-        border-color: #7fc7b6; }
-      .contact-navigator .contact-tab .tab-inner.green {
-        background: #a9c038;
-        border-color: #a9c038; }
-      .contact-navigator .contact-tab .tab-inner:hover {
-        background: white;
-        color: black;
-        cursor: pointer; }
+.info-phone .icon img {
+  display: block;
+  padding: 0 8px 7px 8px; }
+.info-phone .numbers-box {
+  display: block;
+  background-color: red;
+  color: white;
+  font-size: 80%;
+  padding: 3px 15px;
+  text-transform: uppercase; }
+.info-phone .bold {
+  font-weight: bold; }
+.info-phone .italic {
+  font-style: italic; }
+.info-phone .small {
+  font-size: 10px; }
